--- a/Analisador/app/templates/principal.html
+++ b/Analisador/app/templates/principal.html
@@ -11,14 +11,14 @@
 			</div>
 			<div class="row">
 				<div class="input-field col s12">
-					{{ form.palavra_chave() }} <label class="active" for="palavra_chave">Digite uma Palavra Chave</label>
+					{{ form.palavra_chave() }} <label class="active"
+						for="palavra_chave">Digite uma Palavra Chave</label>
 				</div>
 			</div>
 			<div class="row center">
-				<button type="submit" class="btn-large waves-effect waves-light orange">ANALISAR</button>
+				<button type="submit" 
+					class="btn-large waves-effect waves-light orange">ANALISAR</button>
 			</div>
-			<br> <br>
-
 		</div>
 	</form>
 </div>
