--- a/Analisador/app/static/css/style.css
+++ b/Analisador/app/static/css/style.css
@@ -1,19 +1,27 @@
-/* Custom Stylesheet */
-/**
- * Use this file to override Materialize files so you can update
- * the core Materialize files in the future
- *
- * Made By MaterializeCSS.com
- */
-
 .icon-block {
-  padding: 0 15px;
+	padding: 0 15px;
 }
+
 .icon-block .material-icons {
 	font-size: inherit;
 }
+
 .grafico-indicador {
-  margin-top: 0;
-  padding: 2px;
-  margin-bottom: 0px;
+	margin-top: 0;
+	padding: 2px;
+	margin-bottom: 0px;
+}
+
+html {
+	height: 100%;
+}
+
+body {
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
+.content {
+	flex: 1;
 }
