--- a/Analisador/app/templates/analisar_texto.html
+++ b/Analisador/app/templates/analisar_texto.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %} {% block editor %} {% include 'menu.html' %}
-
+{% extends 'base.html' %} {% block editor %}
 <div class="section no-pad-bot" id="index-banner">
 	<form method="POST" action="/analisar/texto/">
 		{{ form.csrf_token }}
@@ -18,22 +17,18 @@
 				<button type="submit"
 					class="btn-large waves-effect waves-light orange">ANALISAR</button>
 			</div>
-			<br> <br>
-
 		</div>
 	</form>
 </div>
-
 {% if tem_informacoes %}
-
 <div class="row">
 	<div class="col s12 m12">
 		<div class="icon-block">
 			<ul class="collapsible">
 				<li>
 					<div class="collapsible-header">
-						<i class="material-icons Small">book</i> INFORMAÇÕES COMPARATIVAS <span
-							class="new badge">1</span>
+						<i class="material-icons Small">book</i> INFORMAÇÕES COMPARATIVAS
+						<span class="new badge">1</span>
 					</div>
 					<div class="collapsible-body">
 						<table class="responsive-table centered">
@@ -61,12 +56,9 @@
 									<td>{{ quantidade_media_palavras_para_texto }}</td>
 									<td>{{ similaridade_media_documento }}</td>
 								</tr>
-
 							</tbody>
 						</table>
-						
 						<h4 class="center">PRINCIPAIS PALAVRAS DO TEXTO E SEU USO</h4>
-						
 						<table class="responsive-table centered">
 							<thead>
 								<tr role="row">
@@ -77,26 +69,22 @@
 								</tr>
 							</thead>
 							<tbody>
-							
-							{% for lista in listas %}
-							
+								{% for lista in listas %}
 								<tr role="row" class="odd">
-									<td><a href="/verificar/palavra/{{ palavra_chave }}/{{ lista[0] }}">{{ lista[0] }}</a></td>
+									<td><a
+										href="/verificar/palavra/{{ palavra_chave }}/{{ lista[0] }}">{{
+											lista[0] }}</a></td>
 									<td>{{ lista[1] }}</td>
 									<td>{{ lista[2] }}</td>
 									<td>{{ lista[3] }}</td>
 								</tr>
-							{% endfor %}
-							
+								{% endfor %}
 							</tbody>
 						</table>
-
 					</div>
 				</li>
-
 			</ul>
 		</div>
 	</div>
 </div>
-{% endif %}
-{% endblock %}
+{% endif %} {% endblock %}
